#Issue 3: third answer added

--- a/exercise/MARIA_SILVANA_TIJERA.html
+++ b/exercise/MARIA_SILVANA_TIJERA.html
@@ -27,7 +27,8 @@
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git branch y el nombre de la rama.
+                    O bien con el comando git checkout -b y el nombre de la rama. Este comando crea la rama y te cambia a la misma.
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
