--- a/exercise/MARIA_SILVANA_TIJERA.html
+++ b/exercise/MARIA_SILVANA_TIJERA.html
@@ -32,7 +32,7 @@
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git clone y el repositorio que deseo clonar.
                 </li>
             </ol>
         </div>
